fix(layout): fix weird small width layout issue on all pages

--- a/src/app/ayat-history/ayat-history.component.scss
+++ b/src/app/ayat-history/ayat-history.component.scss
@@ -1,5 +1,4 @@
 .text-container {
-  width: 70%;
   .custom-row {
     display: flex;
     align-items: center;
