--- a/src/styles.scss
+++ b/src/styles.scss
@@ -223,7 +223,6 @@ a.settings:hover {
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 1);
   cursor: default;
   color: #ddd;
-  width: 55%;
   position: relative;
   margin: 0 auto;
 }
